Open up the app to allow garming data filds and widget to retrieve my blood glucose levels. Remove the version from the Server header and supress the X-Powered-By headers.

--- a/tasks/nightscout.yaml
+++ b/tasks/nightscout.yaml
@@ -18,10 +18,9 @@
       npm: path=/opt/nightscout
 
     - name: Make
-      command: make
+      command: npm run bundle
       args:
         chdir: /opt/nightscout/
-      failed_when: no
       
   become: yes
   become_user: "{{ nodejs_user }}"
